2018-04-21  Thomas E. Dickey  <dickey@invisible-island.net>

	* tests/xterm_winops.py:
	use checkActualPixelSize() for the remaining xterm-resizing tests involving
	resizing by pixels

	* tests/xterm_winops.py:
	refactor test_XtermWinops_ResizePixels_BothParameters() using new function
	checkActualPixelSize()

	* escutil.py: add GetFrameSizePixels()

	* escutil.py: cache the char/screen sizes, fix whitespace per pylint

2018-04-20  Thomas E. Dickey  <dickey@invisible-island.net>

	* tests/xterm_winops.py:
	the remaining failed-test was due to inconsistent max_error value.

	* tests/xterm_winops.py:
	add/use delayAfterMove, delayAfterIcon, delayAfterResize, making all but
	the 2-way maximize work consistently with icewm

2018-04-19  Thomas E. Dickey  <dickey@invisible-island.net>

	* tests/xterm_winops.py:
	change desired size in test_XtermWinops_ResizeChars_DefaultWidth and
	test_XtermWinops_ResizeChars_DefaultHeight to use average vs display size
	for consistency with other xterm-tests

2018-04-18  Thomas E. Dickey  <dickey@invisible-island.net>

	* tests/xterm_winops.py:
	factor out average_width() and average_height(), fix whitespace per pylint

	* tests/xterm_winops.py:
	use absolute difference in some assert's for consistency, per Nachman comment

	* tests/sd.py:
	cite relevant standard for module docstring, fix whitespace per pylint

	* tests/save_restore_cursor.py:
	add docstring to test_SaveRestoreCursor_AltVsMain and
	test_SaveRestoreCursor_Wrap, and fix whitespace per pylint

	* tests/ris.py:
	add docstring to test_RIS_ResetDECCOLM, fix whitespace per pylint

	* tests/rep.py, tests/decfi.py, tests/decdc.py:
	cite relevant standard for module docstring, fix whitespace per pylint

	* tests/decdc.py:
	quote the relevant standard for test_DECDC_IsNoOpWhenCursorBeginsOutsideScrollRegion

	* tests/decbi.py:
	cite relevant standard for test_DECBI_LeftOfMargin and test_DECBI_WholeScreenScrolls

2018-04-17  Thomas E. Dickey  <dickey@invisible-island.net>
