@@ -1,3 +1,14 @@
+2018-04-22  Thomas E. Dickey  <dickey@invisible-island.net>
+
+	* tests/xterm_winops.py: factor out check_for_shrinkage()
+
+	* tests/xterm_winops.py: factor out check_any_size
+
+	* tests/xterm_winops.py: factor out check_actual_size_chars()
+
+	* tests/xterm_winops.py:
+	reduce delays, corrected a label on informational log
+
 2018-04-21  Thomas E. Dickey  <dickey@invisible-island.net>
 
 	* tests/xterm_winops.py:
